Fixed typo uppercase p for pressure.

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -80,7 +80,7 @@ where $\mu$ is the dynamic viscosity and $\mathbf{I}$ is an identity matrix. Whe
 \end{equation}
 With the inviscid and viscous forces determined, conservation of momentum can be written as
 \begin{equation}
-	 \frac{d}{dt}\int_\Omega \rho \vec{v} d\vec{x} + \oint_S \rho \vec{v} (\vec{v} \cdot \hat{n}) ds = \oint_S -P\hat{n} ds + \oint_S \tau \cdot \hat{n} ds,
+	 \frac{d}{dt}\int_\Omega \rho \vec{v} d\vec{x} + \oint_S \rho \vec{v} (\vec{v} \cdot \hat{n}) ds = \oint_S -p\hat{n} ds + \oint_S \tau \cdot \hat{n} ds,
 \end{equation}
 which is commonly written by grouping all of the surface integral terms
 \begin{eqBox}
