--- a/book/Parts/Part3.tex
+++ b/book/Parts/Part3.tex
@@ -57,7 +57,7 @@ To understand the behaviour of these truncated expansions, we note that their er
 \end{equation}
 we note that the leading term omitted from the $f_1(\Delta x)$ approximation behaves like $\Delta x^3$, the leading error term of the $f_1(\Delta x)$ approximation behaves like $\Delta x^5$, and so on. Hence, as we get closer to the expansion point $x=0$, we expect that the error shrinks, and that the rate at which the error shrinks will be proportional to the exponent of the leading truncated term of the expansion.
 \begin{jupyternote}
-	Check out the Burgers Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
+	Check out the Taylor Series Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
 \end{jupyternote}
 \chapter{Finite Difference Methods}
 \section{The First Derivative}
