--- a/book/Parts/Part3.tex
+++ b/book/Parts/Part3.tex
@@ -178,7 +178,7 @@ Now that we have determined the constants in Equation \ref{eqn:2KGWrZa5}, the la
 \begin{eqBox}
 \begin{equation}
 	\Eval{\frac{\partial u}{\partial x}}{x_i}{} = \frac{3u_i - 4u_{i-1} + u_{i-2}}{2 \Delta x} + \mathcal{O}(\Delta x^2),
-	\label{eqn:aHK8G4M7}
+	\label{eqn:aHK8G4M7_2}
 \end{equation}
 \end{eqBox}
 which is a second-order approximation of the first derivative use three points. Hence, we have accomplished our task.
