Fixes to support jupyterlab binder migration + pep8 checks

--- a/notebooks/Chaos.ipynb
+++ b/notebooks/Chaos.ipynb
@@ -19,9 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import figure style and custom functions\n",
-    "import nbtools as nb\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -49,7 +48,7 @@
    "outputs": [],
    "source": [
     "def logistic(a, x):\n",
-    "    return a*x*(1-x)"
+    "    return a*x*(1 - x)"
    ]
   },
   {
@@ -88,7 +87,7 @@
    "source": [
     "# Expected values for a <= 3\n",
     "if a >= 1:\n",
-    "    print('Expected: ', (a-1)/a)\n",
+    "    print('Expected: ', (a - 1) / a)\n",
     "else:\n",
     "    print('Expected: ', 0)"
    ]
@@ -164,15 +163,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(0)\n",
-    "plt.xlabel('$n$')\n",
-    "plt.ylabel('$x$')\n",
     "a = 3.56\n",
     "x = 0.01\n",
     "n = 1001\n",
+    "\n",
+    "x_plot, y_plot = [], []\n",
     "for i in range(n):\n",
     "    x = logistic(a, x)\n",
-    "    plt.plot(i, x, 'ok', markersize=1)"
+    "    \n",
+    "    # Store value for plotting (faster)\n",
+    "    x_plot.append(i)\n",
+    "    y_plot.append(x)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set(xlabel='$n$', ylabel='$x$')\n",
+    "ax.plot(x_plot, y_plot, 'ok', markersize=1)"
    ]
   },
   {
@@ -188,16 +193,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(1)\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "a = 3.581\n",
+    "a = 3.58\n",
     "x = 0.01\n",
     "n = 1001\n",
     "\n",
+    "fig, ax1 = plt.subplots()\n",
+    "ax1.set(xlabel='$n$', ylabel='$x$')\n",
+    "\n",
     "for i in range(n):\n",
     "    x = logistic(a, x)\n",
-    "    plt.plot(i, x, 'ok', markersize=1)"
+    "    ax1.plot(i, x, 'ok', markersize=1);"
    ]
   },
   {
@@ -213,15 +218,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(1)\n",
-    "\n",
     "a = # Slightly change the value of a\n",
     "x = 0.01\n",
     "n = 1001\n",
     "\n",
     "for i in range(n):\n",
-    "    x = logistic(a, x)\n",
-    "    plt.plot(i, x, 'ob', markersize=1)"
+    "    x = logistic(a, x)    \n",
+    "    ax1.plot(i, x, 'ob', markersize=1)"
    ]
   },
   {
@@ -239,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(2)\n",
+    "fig, ax = plt.subplots()\n",
     "\n",
     "# Define multiple values of a simultaneously\n",
     "na = 10000\n",
@@ -250,19 +253,20 @@
     "\n",
     "n = 1000\n",
     "# Run and plot x for large values of n (converged solutions)\n",
+    "x_plot, y_plot = [], []\n",
     "for i in range(n):\n",
     "    x = logistic(a, x)\n",
     "    if i > 950:\n",
-    "        plt.plot(a, x, ',k')\n",
+    "        ax.plot(a, x, ',k')\n",
     "\n",
-    "plt.xlabel('$a$')\n",
-    "plt.ylabel('$x$')"
+    "ax.set_xlabel('$a$')\n",
+    "ax.set_ylabel('$x$');"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -276,9 +280,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
