--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -16,12 +16,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Configuration for visualizing the plots\n",
-    "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -50,7 +51,7 @@
     "    x = np.linspace(0, L - dx, n)\n",
     "\n",
     "    # Initialize solution\n",
-    "    u = np.exp(-40*(x-1/2)**2)\n",
+    "    u = np.exp(-40 * (x - 1/2) ** 2)\n",
     "    ut = np.zeros(u.shape)\n",
     "\n",
     "    # Advance solution in time\n",
@@ -59,35 +60,14 @@
     "        for i in range(n):\n",
     "            # Enforce periodic boundary condition at x=0\n",
     "            if i == 0:\n",
-    "                ut[i] = u[i] - a*dt/dx*(u[i] - u[n - 1])\n",
+    "                ut[i] = u[i] - a*dt/dx * (u[i] - u[n - 1])\n",
     "            else:\n",
-    "                ut[i] = u[i] - a*dt/dx*(u[i] - u[i - 1])\n",
+    "                ut[i] = u[i] - a*dt/dx * (u[i] - u[i - 1])\n",
     "\n",
     "        u[:] = ut[:]\n",
     "        t += dt\n",
     "\n",
-    "    plt.plot(x, u, 'o-', markersize=2, label=f'$n={n}$')\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. \n",
-    "\n",
-    "**Note**: You can always run this cell again to clear the figure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(0)\n",
-    "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')"
+    "    return u"
    ]
   },
   {
@@ -108,24 +88,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure plot uses figure above\n",
-    "plt.figure(0)\n",
-    "\n",
     "# Assign the corresponding values to the following variables\n",
-    "a =\n",
+    "a = \n",
     "L = \n",
-    "n =  \n",
+    "n = \n",
     "dt = \n",
-    "tf =\n",
+    "tf = \n",
     "\n",
-    "advection_upwind(a, L, n, dt, tf)"
+    "# Run upwind advection problem\n",
+    "u = advection_upwind(a, L, n, dt, tf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, call the function ``advection_upwind`` again with 20, 40, 80 and 160 grid points. Keep the rest of the variables the same. What behaviour do you observe? The result must be equal to the figure shown in the Linear Advection section of the Finite Difference chapter."
+    "The solution can be plotted as follows"
    ]
   },
   {
@@ -134,19 +112,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure plot uses figure above\n",
-    "plt.figure(0)\n",
+    "# Define plotting grid\n",
+    "x = np.linspace(0, L - L/n, n)\n",
     "\n",
-    "# Call advection in this cell as many times as required. \n",
-    "# You may use a for loop. \n",
-    "# Note that the figure will be updated above."
+    "# Create figure instance\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot solution and add labels\n",
+    "ax.plot(x, u, 'o-', markersize=2, label=f'$n={n}$')\n",
+    "ax.set_xlabel('$x$')\n",
+    "ax.set_ylabel('$u(x,t)$')\n",
+    "ax.legend();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new figure, and play with different time step sizes"
+    "Now, generate a plot with the results of `advection_upwind` with 10, 20, 40, 80 and 160 grid points together. Keep the rest of the variables the same. What behaviour do you observe? The result must be equal to the figure shown in the Linear Advection section of the Finite Difference chapter."
    ]
   },
   {
@@ -155,9 +138,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(1)\n",
-    "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')"
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Generate the grid and solution for the required numbers of grid points\n",
+    "# You may use a for loop\n",
+    "\n",
+    "ax.set_xlabel('$x$')\n",
+    "ax.set_ylabel('$u(x,t)$')\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a new figure, and play with different time step sizes. What is the maximum value of `dt` that gives a bounded solution?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.set_xlabel('$x$')\n",
+    "ax.set_ylabel('$u(x,t)$');"
    ]
   },
   {
@@ -177,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -191,9 +198,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
