--- a/notebooks/Burgers.ipynb
+++ b/notebooks/Burgers.ipynb
@@ -19,9 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration for visualizing the plots\n",
-    "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -48,9 +47,9 @@
     "    # Build grid\n",
     "    dx = L/n\n",
     "    x = np.linspace(0, L - dx, n)\n",
-    "    \n",
+    "\n",
     "    # Initialize solution\n",
-    "    u = np.exp(-40*(x-1/2)**2)\n",
+    "    u = np.exp(-40 * (x - 1/2) ** 2)\n",
     "    ut = np.zeros(u.shape)\n",
     "\n",
     "    # Advance solution in time\n",
@@ -59,35 +58,14 @@
     "        for i in range(n):\n",
     "            # Enforce periodic boundary condition at x=0\n",
     "            if i == 0:\n",
-    "                ut[i] = u[i] - 0.5*dt/dx * (u[i]**2-u[n-1]**2)\n",
+    "                ut[i] = u[i] - 0.5*dt/dx * (u[i]**2 - u[n - 1]**2)\n",
     "            else:\n",
-    "                ut[i] = u[i] - 0.5*dt/dx * (u[i]**2-u[i-1]**2)\n",
+    "                ut[i] = u[i] - 0.5*dt/dx * (u[i]**2 - u[i - 1]**2)\n",
     "\n",
     "        u[:] = ut[:]\n",
     "        t += dt\n",
-    "        \n",
-    "    plt.plot(x, u, 'o-', markersize=2, label=f'$n={n}$')\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure.\n",
     "\n",
-    "**Note**: You can always run this cell again to clear the figure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(0)\n",
-    "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')"
+    "    return u"
    ]
   },
   {
@@ -107,23 +85,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure plot uses figure above\n",
-    "plt.figure(0)\n",
-    "\n",
     "# Assign the provided values to the following variables\n",
     "L = \n",
     "n = \n",
     "dt = \n",
     "tf = \n",
     "\n",
-    "burgers(L, n, dt, tf)"
+    "u = burgers(L, n, dt, tf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, call the function ``burgers`` again with 20, 40, 80 and 160 grid points. Keep the rest of the variables the same. What behaviour do you observe? The result must be equal to the figure shown in the Burgers section of the Finite Difference chapter."
+    "Generate a plot of the solution"
    ]
   },
   {
@@ -132,18 +107,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure plot uses figure above\n",
-    "plt.figure(0)\n",
+    "# Define plotting grid\n",
+    "x = np.linspace(0, L - L/n, n)\n",
     "\n",
-    "# Call burgers in this cell as many times as required. \n",
-    "# You may use a for loop. \n",
-    "# Note that the figure will be updated above."
+    "# Create figure instance\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot solution and add labels\n",
+    "ax.plot(x, u, 'o-', markersize=2, label=f'$n={n}$')\n",
+    "ax.set_xlabel('$x$')\n",
+    "ax.set_ylabel('$u(x,t)$')\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, call the function `burgers` again with 10, 20, 40, 80 and 160 grid points. Keep the rest of the variables the same. What behaviour do you observe? The result must be equal to the figure shown in the Burgers section of the Finite Difference chapter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Generate the grid and solution for the required numbers of grid points\n",
+    "# You may use a for loop\n",
+    "\n",
+    "ax.set_xlabel('$x$')\n",
+    "ax.set_ylabel('$u(x,t)$')\n",
+    "ax.legend();"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,9 +160,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
