--- a/notebooks/Getting started.ipynb
+++ b/notebooks/Getting started.ipynb
@@ -71,16 +71,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "total = 0\n",
     "for number in numbers:\n",
     "    if number < 0:\n",
     "        total = total + number\n",
-    "        \n",
+    "\n",
     "print(total)"
    ]
   },
@@ -126,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "import numpy as np\n",
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt"
@@ -447,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -461,9 +459,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
