--- a/notebooks/Sod's Shock-Tube Problem.ipynb
+++ b/notebooks/Sod's Shock-Tube Problem.ipynb
@@ -19,9 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration for visualizing the plots\n",
-    "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -562,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -576,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
