--- a/notebooks/Time-Stepping Methods.ipynb
+++ b/notebooks/Time-Stepping Methods.ipynb
@@ -19,9 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration for visualizing the plots\n",
-    "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -52,7 +51,7 @@
    "outputs": [],
    "source": [
     "def residual(u, a, dx):\n",
-    "    # Second-order accurate central method\n",
+    "    # Second-order accurate central method (periodic BC)\n",
     "    return -0.5*a/dx*(np.roll(u, -1) - np.roll(u, 1))"
    ]
   },
@@ -147,9 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dt = 0.005\n",
@@ -231,7 +228,7 @@
     "uf = rk4(u0, a, dx, dt, tf)\n",
     "plt.figure()\n",
     "plt.plot(x, uf, label=\"RK4\")\n",
-    "plt.legend()"
+    "plt.legend();"
    ]
   },
   {
@@ -244,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -258,9 +255,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
