--- a/notebooks/Von Neumann.ipynb
+++ b/notebooks/Von Neumann.ipynb
@@ -19,9 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration for visualizing the plots\n",
-    "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
+    "# Use interactive backend (change to %matplotlib notebook if not using jupyterlab)\n",
+    "%matplotlib widget\n",
     "\n",
     "# Required modules\n",
     "import numpy as np\n",
@@ -45,7 +44,7 @@
    "outputs": [],
    "source": [
     "def ampf_advection_explicit(sigma, kmdx):\n",
-    "    amp = np.abs(1-sigma+sigma*np.exp(-1j*kmdx))\n",
+    "    amp = np.abs(1 - sigma + sigma * np.exp(-1j*kmdx))\n",
     "    return amp"
    ]
   },
@@ -98,8 +97,9 @@
     "ax.set_ylabel(r'$|e^{a\\Delta t}|$')\n",
     "\n",
     "# Manually set tick labels as multiples of pi/4 (must change if range changes)\n",
-    "plt.xticks([0, np.pi/4, np.pi/2, 3*np.pi/4, np.pi], \n",
-    "           ['0', r'$\\frac{\\pi}{4}$',  r'$\\frac{\\pi}{2}$',  r'$\\frac{3\\pi}{4}$', r'$\\pi$'])"
+    "plt.xticks([0, np.pi/4, np.pi/2, 3*np.pi/4, np.pi],\n",
+    "           ['0', r'$\\frac{\\pi}{4}$',  r'$\\frac{\\pi}{2}$',\n",
+    "            r'$\\frac{3\\pi}{4}$', r'$\\pi$']);"
    ]
   },
   {
@@ -171,13 +171,13 @@
     "\n",
     "# Manually set tick labels as multiples of pi/4 (must change if range changes)\n",
     "plt.xticks([0, np.pi/4, np.pi/2, 3*np.pi/4, np.pi], \n",
-    "           ['0', r'$\\frac{\\pi}{4}$',  r'$\\frac{\\pi}{2}$',  r'$\\frac{3\\pi}{4}$', r'$\\pi$'])"
+    "           ['0', r'$\\frac{\\pi}{4}$',  r'$\\frac{\\pi}{2}$',  r'$\\frac{3\\pi}{4}$', r'$\\pi$']);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -191,9 +191,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
